feat: Subscribe Student
